# pa-android-tests

./: .gitignore  README.md  crosscompile_portaudio_android.sh
Portaudioexample/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
Portaudioexample/app/src/androidTest/java/gundersanne/portaudioexample/: ExampleInstrumentedTest.java
Portaudioexample/app/src/main/: AndroidManifest.xml
Portaudioexample/app/src/main/cpp/: native-lib.cpp
Portaudioexample/app/src/main/java/gundersanne/portaudioexample/: MainActivity.java
Portaudioexample/app/src/main/res/layout/: activity_main.xml
Portaudioexample/app/src/main/res/values/: strings.xml
Portaudioexample/app/src/test/java/gundersanne/portaudioexample/: ExampleUnitTest.java
Portaudioexample/gradle/wrapper/: gradle-wrapper.properties
Portaudioexample/portaudioLibs/lib/armeabi-v7a/: libportaudio.la
docs/: index.md
docs/armeabi-v7a/: app-debug.apk
playrecord/jni/: Android.mk  playrecord.c
playrecordblocking/jni/: Android.mk  playrecordblocking.c
sinewave/jni/: Android.mk  sinetest.c
sinewave/jni/include/: pa_opensles.h
sinewaveblocking/jni/: Android.mk  blockingsinetest.c
sinewaveblocking/jni/armeabi-v7a/: libportaudio.la
unit-tests/jni/: Android.mk  Application.mk  CMakeLists.txt  sinetest.c
